@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam class {
    BackgroundColor<<Abstract>> LightYellow
    BorderColor Black
    ArrowColor Black
}

' ============ MAIN CLASSES ============

class UAV <<Abstract>> {
    - state: float[6]
    - controls: dict
    __
    + step(dt): void
    + apply_acceleration_control(u): void
    + velocity_vector: float[3]
}

class Hawk {
    - sensing_radius: float
    - neighbor_radius: float
    - current_target: Pigeon
    __
    + choose_target(pigeons): Pigeon
    + control(pigeon): float[3]
    {static} + closest_pigeon(): Pigeon
    {static} + margin_target(): Pigeon
    {static} + density_target(): Pigeon
}

class Pigeon {
    - escape_radius: float
    - avoidance_radius: float
    - k1, k2, k3: float
    __
    + control(target, hawks, pigeons): float[3]
    + compute_attack_accel(): float[3]
    + compute_escape_accel(): float[3]
    + compute_avoid_accel(): float[3]
}

class Game {
    - hawks: Hawk[]
    - pigeons: Pigeon[]
    - target: float[3]
    - dt: float
    - time: float
    __
    + run(T): string
    + update(): void
    - check_capture(): void
}

class Dynamics <<Utility>> {
    {static} + dynamics(state, controls): float[6]
    {static} + rk4_step(state, controls, dt): float[6]
}

class Converter <<Utility>> {
    {static} + control_converter(u, mu, phi): tuple
}

' ============ RELATIONSHIPS ============

' Inheritance
Hawk --|> UAV
Pigeon --|> UAV

' Composition (Game contains Hawks and Pigeons)
Game *-- "0..*" Hawk : contains
Game *-- "0..*" Pigeon : contains

' Usage
UAV ..> Dynamics : uses
UAV ..> Converter : uses
Game ..> Dynamics : uses

' Association
Hawk --> Pigeon : targets

note right of UAV
  **state** = [x, y, z, V, μ, φ]
  **controls** = {nx, nf, γ}
  Base class for all UAVs
end note

note right of Game
  Simulation engine
  Manages time loop
  and interactions
end note

@enduml